--- a/sites/all/themes/r2ep_theme/scss/_layout.scss
+++ b/sites/all/themes/r2ep_theme/scss/_layout.scss
@@ -75,6 +75,7 @@ header[role='banner'] {
 }
 
 .region-highlighted {
+	min-width: 960px;
 	max-width: 1220px;
 	margin: 0 auto;
 }
